update and new posts

--- a/_posts/2025-06-13-abasa.md
+++ b/_posts/2025-06-13-abasa.md
@@ -10,39 +10,35 @@ Tiba-tiba, datanglah seorang yang buta. Abdullah bin Ummi Maktum namanya. Dia su
 
 Dia yang buta tidak mengetahui bahwa Nabi sedang berbicara dengan orang lain. Dia mengulang permintaannya beberapa kali. Akhirnya, Nabi berwajah masam dan berpaling darinya. Sampai turunlah wahyu.
 
-( * * )
-
+(عَبَسَ وَتَوَلَّى * أَنْ جَاءَهُ الأعْمَى * وَمَا يُدْرِيكَ لَعَلَّهُ يَزَّكَّى)
 
 Dia (Muhammad) bermuka masam dan berpaling, karena telah datang seorang buta kepadanya. Tahukah kamu barangkali ia ingin membersihkan dirinya (dari dosa). ('Abasa: 1-3)
 
 Yakni menginginkan agar dirinya suci dan bersih dari segala dosa.
 
-( )
+(أَوْ يَذَّكَّرُ فَتَنْفَعَهُ الذِّكْرَى)
 
 atau dia (ingin) mendapatkan pengajaran, lalu pengajaran itu memberi manfaat kepadanya? ('Abasa: 4)
-
 Yaitu memperoleh pelajaran untuk dirinya sehingga ia menahan dirinya dari hal-hal yang diharamkan.
 
-( * )
+(أَمَّا مَنِ اسْتَغْنَى * فَأَنْتَ لَهُ تَصَدَّى)
 
 Adapun orang yang merasa dirinya serba cukup, maka kamu melayaninya. ('Abasa: 5-6)
 
 Adapun orang yang serba cukup, maka kamu melayaninya dengan harapan dia mendapat petunjuk darimu.
 
-( )
+(وَمَا عَلَيْكَ أَلا يَزَّكَّى)
 
 Padahal tidak ada (celaan) atasmu kalau dia tidak membersihkan diri (beriman). ('Abasa: 7)
 
 Artinya, kamu tidak akan bertanggungjawab mengenainya bila dia tidak mau membersihkan dirinya (beriman).
 
-( * )
+(وَأَمَّا مَنْ جَاءَكَ يَسْعَى * وَهُوَ يَخْشَى)
 
-Dan adapun orang yang datang kepadamu dengan bersegera (untuk mendapatkan pengajaran), sedangkan ia takut (kepada Allah). ('Abasa: 8-9)
+Dan adapun orang yang datang kepadamu dengan bersegera (untuk mendapatkan pengajaran), sedangkan ia takut (kepada Allah). (‘Abasa: 8-9)
 
 Yakni dengan sengaja datang kepadamu untuk mendapat petunjuk dari pengarahanmu kepadanya.
 
-( )
+(فَأَنْتَ عَنْهُ تَلَهَّى)
 
 maka kamu mengabaikannya. ('Abasa: 10)
-
-Teguran ini adalah bentuk pengajaran bagi Nabi Muhammad dan umatnya, agar dapat bersikap baik terutama dalam memprioritaskan tamu.
