--- a/_posts/2022-04-18-milik.md
+++ b/_posts/2022-04-18-milik.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Kita Milik Allah"
 author: mnafisalmukhdi1
-categories: Message
+categories: Pesan
 ---
 Izinkan aku mengingatkan diri sendiri.
 
