--- a/_posts/2022-06-01-esa.md
+++ b/_posts/2022-06-01-esa.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Esa"
 author: mnafisalmukhdi1
-categories: [Poem, Message]
+categories: [Puisi, Pesan]
 ---
 Siapa<br>
 Sebuah tanya<br>
