--- a/_posts/2022-08-05-2434id-livers.md
+++ b/_posts/2022-08-05-2434id-livers.md
@@ -2,7 +2,7 @@
 layout: post
 title: "List of NIJISANJI ID Livers"
 author: mnafisalmukhdi1
-categories: Other
+categories: Lainnya
 ---
 <b>Debut Order</b><br>
 Wave 1 - 3SETBBQ (13 September 2019)<br>
