--- a/_posts/2022-08-08-pintu.md
+++ b/_posts/2022-08-08-pintu.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Pintu"
 author: mnafisalmukhdi1
-categories: Poem
+categories: Puisi
 ---
 Dua ketukan<br>
 Dibuka dengan deritan<br>
