--- a/_posts/2022-08-14-lore.md
+++ b/_posts/2022-08-14-lore.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Lore"
 author: mnafisalmukhdi1
-categories: Poem
+categories: Puisi
 ---
 Speech impediment<br>
 It's just feel like stuck in the basement<br>
