--- a/_posts/2022-08-16-bayangan.md
+++ b/_posts/2022-08-16-bayangan.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Bayangan"
 author: mnafisalmukhdi1
-categories: Poem
+categories: Puisi
 ---
 Berjalan dari belakang tanpa arah yang jelas<br>
 Penuh dengan pengharapan juga ketakutan yang memelas<br>
