--- a/_posts/2022-08-17-buntu.md
+++ b/_posts/2022-08-17-buntu.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Buntu"
 author: mnafisalmukhdi1
-categories: Poem
+categories: Puisi
 ---
 Sebuah kisah tentang aral<br>
 Halang rintang nan terjal<br>
