--- a/_posts/2022-08-17-libera.md
+++ b/_posts/2022-08-17-libera.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Libera"
 author: mnafisalmukhdi1
-categories: Poem
+categories: Puisi
 ---
 Terlepas dari kekangan<br>
 Begitu meronta dalam perjuangan<br>
