--- a/_posts/2022-08-27-bunga.md
+++ b/_posts/2022-08-27-bunga.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Bunga"
 author: mnafisalmukhdi1
-categories: Poem
+categories: Puisi
 ---
 Semerbak aroma memenuhi udara<br>
 Menghirup harumnya di taman penuh rupa<br>
