--- a/_posts/2022-08-29-rest.md
+++ b/_posts/2022-08-29-rest.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Rest"
 author: mnafisalmukhdi1
-categories: Poem
+categories: Puisi
 ---
 Jeda bagai waktu henti<br>
 Terus diam, tak berarti<br>
