--- a/_posts/2022-09-07-kapal.md
+++ b/_posts/2022-09-07-kapal.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Kapal"
 author: mnafisalmukhdi1
-categories: Poem
+categories: Puisi
 ---
 Ombak menerpa haluan<br>
 Berlayar maju di lautan<br>
