--- a/_posts/2022-09-22-nirjudul.md
+++ b/_posts/2022-09-22-nirjudul.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Nirjudul"
 author: mnafisalmukhdi1
-categories: Poem
+categories: Puisi
 ---
 Ujarmu mari singgah sejenak<br>
 Berteduh dalam halte untuk perjalanan<br>
