--- a/_posts/2022-11-19-identitas-2434id.md
+++ b/_posts/2022-11-19-identitas-2434id.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Identitas 🌈🕒🇮🇩"
 author: mnafisalmukhdi1
-categories: Other
+categories: Lainnya
 ---
 Engkau yang membukakan jalan<br>
 Orang lain yang memanfaatkan<br>
