--- a/_posts/2022-12-10-suara.md
+++ b/_posts/2022-12-10-suara.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Suara"
 author: mnafisalmukhdi1
-categories: Poem
+categories: Puisi
 ---
 Kekangan dari batasan<br>
 Suara tak dapat tersampaikan<br>
