--- a/_posts/2023-02-16-bakar.md
+++ b/_posts/2023-02-16-bakar.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Bakar"
 author: mnafisalmukhdi1
-categories: Poem
+categories: Puisi
 ---
 Siapakah yang dapat menerka<br>
 Anugerah Sang Pemilik Kuasa<br>
