--- a/_posts/2024-06-22-hectic.md
+++ b/_posts/2024-06-22-hectic.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Hectic"
 author: mnafisalmukhdi1
-categories: Poem
+categories: Puisi
 ---
 Detik jarum berputar seakan tiada henti<br>
 Mendamba setiap ubah arah lantas berarti<br>
