--- a/_posts/2024-10-28-dekrit.md
+++ b/_posts/2024-10-28-dekrit.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Dekrit"
 author: mnafisalmukhdi1
-categories: Poem
+categories: Puisi
 ---
 Arah yang hendak dicapai menjadi titik mula<br>
 Sebuah perjalanan demi terciptanya bahagia<br>
