--- a/_posts/2024-11-01-ramanda.md
+++ b/_posts/2024-11-01-ramanda.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Ramanda"
 author: mnafisalmukhdi1
-categories: Poem
+categories: Puisi
 ---
 Ketetapan Yang Kuasa pantas dipuja<br>
 Menghadirkan sang insan ke dunia<br>
