--- a/_posts/2024-11-27-mujur.md
+++ b/_posts/2024-11-27-mujur.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Mujur"
 author: mnafisalmukhdi1
-categories: Poem
+categories: Puisi
 ---
 Kelinci putih melompat di atas bulan purnama<br>
 Ikan Koi ganda dalam kolam atau Arwana<br>
