--- a/_posts/2025-04-08-hbd23.md
+++ b/_posts/2025-04-08-hbd23.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Happy Birthday to Me! (23)"
 author: mnafisalmukhdi1
-categories: Mine
+categories: Pribadi
 ---
 Happy birthday to me! And it's the 23!
 Selamat ulang tahun untuk diriku.
