--- a/_posts/2025-06-13-abasa.md
+++ b/_posts/2025-06-13-abasa.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Abasa"
 author: mnafisalmukhdi1
-categories: Mine
+categories: Pesan
 ---
 Suatu hari, nabi Muhammad berbicara dengan pembesar Quraisy. Saat itu, Nabi mengarahkan seluruh perhatiannya kepada orang ini karena Nabi sangat ingin agar dia masuk Islam.
 
