--- a/_posts/2022-04-08-hbd20.md
+++ b/_posts/2022-04-08-hbd20.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Happy Birthday to Me! (20)"
 author: mnafisalmukhdi1
-categories: Mine
+categories: Pribadi
 ---
 Happy Birthday to me! And it's the 20th.
 Selamat ulang tahun untukku.
