--- a/_posts/2022-08-18-luput.md
+++ b/_posts/2022-08-18-luput.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Luput"
 author: mnafisalmukhdi1
-categories: Poem
+categories: Puisi
 ---
 Arah mana engkau sasar<br>
 Engkau masih belajar<br>
