--- a/_posts/2022-09-10-nyawa.md
+++ b/_posts/2022-09-10-nyawa.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Nyawa"
 author: mnafisalmukhdi1
-categories: Poem
+categories: Puisi
 ---
 Tiupan kasih sayang<br>
 Hayat tiada terbayang<br>
