--- a/_posts/2022-10-15-fault.md
+++ b/_posts/2022-10-15-fault.md
@@ -2,7 +2,7 @@
 layout: post
 title: Fault
 author: mnafisalmukhdi1
-categories: Poem
+categories: Puisi
 ---
 Segala terpuruk<br>
 Hawa memburuk<br>
