--- a/_posts/2022-05-04-yellow.md
+++ b/_posts/2022-05-04-yellow.md
@@ -2,7 +2,7 @@
 layout: post
 title: "KUNING"
 author: mnafisalmukhdi1
-categories: Terjemahan Lagu
+categories: Terjemahan-Lagu
 ---
 Singkatnya kuterjebak dalam keingintahuan<br>
 Hal-hal yang penting tidak kuhiraukan<br>
