--- a/_posts/2023-07-29-3min-29sec.md
+++ b/_posts/2023-07-29-3min-29sec.md
@@ -2,7 +2,7 @@
 layout: post
 title: "hitorie - 3 min 29 sec (Translirik Indonesia)"
 author: mnafisalmukhdi1
-categories: Terjemahan Lagu
+categories: Terjemahan-Lagu
 ---
 Berharap maupun bersimpuh tak kan mengubah<br>
 Sudah takdirnya, akan menginjak bunga<br>
