--- a/_posts/2023-07-30-kazehana.md
+++ b/_posts/2023-07-30-kazehana.md
@@ -2,7 +2,7 @@
 layout: post
 title: "hitorie - Kazehana (Translirik Indonesia)"
 author: mnafisalmukhdi1
-categories: Terjemahan Lagu
+categories: Terjemahan-Lagu
 ---
 Alangkah baiknya perasaan bagusku hendak menjadi nyata<br>
 Kuyakin akan mau tinggal di sini selamanya dan tidur saja<br>
